Moved anchors to prevent navbar from overlapping
* Previously, clicking on link in offcanvas menu would cause navbar to
  cover named anchor. This has been fixed.
* Generic link styling has been adjusted.

--- a/resources/styles_milestone3/mycss_web.css
+++ b/resources/styles_milestone3/mycss_web.css
@@ -6,11 +6,13 @@ a {
     color: inherit;
 }
 
-h2 a {
-    text-decoration: none;
+a:hover {
+    color: #4b4bd1;
 }
 
-h2 a:hover {
-    color: inherit;
-    text-decoration: underline;
+.heading-anchor {
+    display: block;
+    position: relative;
+    top: -25px;
+    visibility: hidden;
 }
